plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	//id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.backend'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
	//implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation'org.springframework.session:spring-session-jdbc'



	//웹 크롤링
	implementation 'org.seleniumhq.selenium:selenium-java:4.8.0'
	implementation 'org.seleniumhq.selenium:selenium-devtools-v130:4.28.1'
	implementation 'org.jsoup:jsoup:1.18.3'

	//스웨거
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	//s3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
}

tasks.named('test') {
	useJUnitPlatform()
}
// CI/CD 하면서 추가
def querydslDir = "src/main/generated"

sourceSets {
	main.java.srcDirs += [ querydslDir ]
}

tasks.withType(JavaCompile) {
	options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
}

clean.doLast {
	file(querydslDir).deleteDir()
}

clean {
	delete fileTree(dir: 'src/main/generated', include: '**/*.java')
}
tasks.withType(JavaCompile) {
	options.compilerArgs += [
			'--add-opens',
			'java.base/java.lang=ALL-UNNAMED',
			'--add-opens',
			'java.base/java.util=ALL-UNNAMED'
	]
}